Add snapshot Main

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <base href="/">
   <title>6 cities</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/leaflet.css">
 </head>
 
 <body>
